--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.6",
+        "php": "^8.0",
         "viktor-melnikov/requester": "1.*"
     },
     "autoload": {
